change general data display style and fixed z-index issue with firefox

--- a/static/css/pdd.css
+++ b/static/css/pdd.css
@@ -17,7 +17,8 @@
   100% { opacity: 0;
          display: none;
          height: 0;
-         width: 0; }
+         width: 0;
+         z-idex: -1; }
 }
 
 /* Spin effect */
